[gd_scene load_steps=3 format=3 uid="uid://68baroii34et"]

[ext_resource type="Script" uid="uid://d0oefn44ewu0o" path="res://autoloads/stats/_stats_ui.gd" id="1_i52xt"]
[ext_resource type="Texture2D" uid="uid://ot2c0scv2b" path="res://resources/_textures/placeholder_08.tres" id="2_8o1cx"]

[node name="StatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_i52xt")

[node name="Stats" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 40.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Stats"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HealthBar" type="TextureProgressBar" parent="Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 100.0
rounded = true
texture_progress = ExtResource("2_8o1cx")
tint_progress = Color(1, 0, 0.156863, 1)

[node name="StaminaBar" type="TextureProgressBar" parent="Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 100.0
rounded = true
texture_progress = ExtResource("2_8o1cx")
tint_progress = Color(0, 1, 0.156863, 1)

[node name="MagicBar" type="TextureProgressBar" parent="Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 100.0
rounded = true
texture_progress = ExtResource("2_8o1cx")
tint_progress = Color(0.156863, 0.392157, 1, 1)
